--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ Thumbs.db
 articles/~$очнение положения лазера при колебаниях.docx
 
 build-qt-pcl-Desktop_Qt_5_2_1_clang_64bit-Debug
+*.log
+
+*.user
+
+*.suo
